# icfpc2024

./: .envrc  README.md  dune-project  flake.nix  lambdaman  send
lib/: dune  icfp.ml  maze.ml
problems/: 3d.md  3d8.icfp  3d8.txt  lambdaman10.txt  lambdaman22.txt  lambdaman6.txt  lambdaman9.txt  spaceship.md
solutions/: lambdaman1.icfp  lambdaman1.txt  lambdaman10.icfp  lambdaman10.txt  lambdaman11.icfp  lambdaman11.txt  lambdaman12.icfp  lambdaman12.txt  lambdaman13.icfp  lambdaman13.txt  lambdaman14.icfp  lambdaman14.txt  lambdaman15.icfp  lambdaman15.txt  lambdaman16.icfp  lambdaman16.txt  lambdaman17.icfp  lambdaman17.txt  lambdaman18.icfp  lambdaman18.txt  lambdaman19.icfp  lambdaman19.txt  lambdaman2.icfp  lambdaman2.txt  lambdaman20.icfp  lambdaman20.txt  lambdaman3.icfp  lambdaman3.txt  lambdaman4.icfp  lambdaman4.txt  lambdaman5.icfp  lambdaman5.txt  lambdaman6.icfp  lambdaman6.txt  lambdaman7.icfp  lambdaman7.txt  lambdaman8.icfp  lambdaman8.txt  lambdaman9.icfp  lambdaman9.txt
