(lang dune 3.9)

(name icfpc2024)

(source
 (github sanityinc/icfpc2024))

(authors "Steve Purcell")

(maintainers "Steve Purcell")

(license LICENSE)

(package
 (name icfpc2024)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
